k8s/deployment.yaml
# Django Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: filiptodorov/django-app:latest
          ports:
            - containerPort: 8000
          command: ["sh", "-c"]
          args:
            - |
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000
